--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background: #171717;
+  background: #010001;
   color: #f1f1f1;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -287,7 +287,7 @@ td {
 footer {
   padding-block: 18px;
   margin: 0 auto;
-  background-color: #171717;
+  background-color: #010001;
 }
 
 @media (min-width: 644px) {
@@ -361,7 +361,7 @@ footer {
     width: 100%;
     aspect-ratio: 1 / 1;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
     vertical-align: middle;
     opacity: 0.25;
     border-radius: 100%;
